# allow-privilege-escalation-psp-policy

./: .gitignore  Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml
.github/workflows/: release.yml  tests.yml
rancher-helm-chart/: .helmignore  Chart.yaml  questions.yaml  readme-dir.md  values.yaml
rancher-helm-chart/templates/: policy.yaml
src/: lib.rs  settings.rs
test_data/: deployment_with_allow_privileged_escalation.json  req_pod_with_allowPrivilegeEscalation_disabled.json  req_pod_with_container_with_security_context_and_allowPrivilegeEscalation.json  req_pod_with_init_container_with_security_context_and_allowPrivilegeEscalation.json  req_pod_with_security_context_and_allowPrivilegedEscalation_enabled.json  req_pod_without_security_context.json
