[package]
name = "allow-privilege-escalation-psp"
version = "0.1.11"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
k8s-openapi = { version = "0.15.0", default_features = false, features = ["v1_24"] }
serde_json = "1.0"
kubewarden-policy-sdk = "0.6.3"

[dev-dependencies]
serde_yaml = "0.8"
