[package]
name = "allow-privilege-escalation-psp"
version = "1.0.3"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "v1_32",
] }
serde_json = "1.0"
kubewarden-policy-sdk = "0.15.0"

[dev-dependencies]
serde_yaml = "0.9"
